fitness-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fitness-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fitness-app
  template:
    metadata:
      labels:
        app: fitness-app
    spec:
      containers:
      - name: fitness-app
        image: muralisocial123/fitness-app:v1.0.1
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
