ey-cart-deplyment-service.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ey-cart-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ey-cart-app
  template:
    metadata:
      labels:
        app: ey-cart-app
    spec:
      containers:
      - name: ey-cart-app
        image: muralisocial123/ey-cart:v1.1.0
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: ey-cart-app-service
spec:
  type: ClusterIP
  selector:
    app: ey-cart-app
  ports:
  - port: 3000
    targetPort: 3000
