fitness-app-deployment-service.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fitness-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fitness-app
  template:
    metadata:
      labels:
        app: fitness-app
    spec:
      containers:
      - name: fitness-app
        image: muralisocial123/fitness-app:v1.0.1
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: fitness-app-service
spec:
  type: ClusterIP
  selector:
    app: fitness-app
  ports:
  - port: 5000
    targetPort: 5000
