fitness-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fitness-app-service
spec:
  type: NodePort
  selector:
    app: fitness-app
  ports:
  - port: 5000
    targetPort: 5000
