kyndryll-flower-app-deployment-service.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flower-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flower-app
  template:
    metadata:
      labels:
        app: flower-app
    spec:
      containers:
      - name: flower-app
        image: muralisocial123/kyndrl-flower-app:v1.1.0
        ports:
        - containerPort: 3015
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: fitness-app-service
spec:
  type: NodePort
  selector:
    app: fitness-app
  ports:
  - port: 3015
    targetPort: 3015
