transaction-app-deployment-service.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: transaction-app
  template:
    metadata:
      labels:
        app: transaction-app
    spec:
      containers:
      - name: transaction-app
        image: muralisocial123/transaction-app:v1.0.0
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: transaction-app-service
spec:
  type: NodePort
  selector:
    app: transaction-app
  ports:
  - port: 3000
    targetPort: 3000
