ey-cart-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ey-cart-route
  namespace: gateway-ns
spec:
  parentRefs:
    - name: asad-gateway
      namespace: gateway-ns
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: ey-cart-app-service
          port: 3000
