flower-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flower-app-route
  namespace: gateway-ns
spec:
  parentRefs:
    - name: asad-gateway
      namespace: gateway-ns
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /flower
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: flower-app-service
          port: 3015
